# echo-messenger

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RIVERPOD_MIGRATION.md  SPRINT_PLAN.md  TECHNICAL_DEBT.md  codecov.yml  commitlint.config.js  deny.toml  lefthook.yml  need_to_know.md  package-lock.json  package.json  rustfmt.toml  sonar-project.properties  tasks.md  tomorrows_tasks.md
.claude/: tasks.json
.claude/commands/: echo-dev.md  echo-feat.md  echo-fix.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: cs2 source agent.agent.md
.github/workflows/: commitlint.yml  dev-build.yml  e2e.yml  flutter-ci.yml  release.yml  rust-ci.yml  security.yml  sonarcloud.yml
agent-knowledge/: CLAUDE.md  flutter-e2e-testing.md  improving-encrypted-chat-app.md
agent-knowledge/resources/: flutter-e2e-testing-sources.json  improving-encrypted-chat-app-sources.json
apps/client/: Dockerfile.web  nginx.conf  pubspec.yaml
apps/server/: Cargo.toml  Dockerfile
apps/server/benches/: hub.rs
apps/server/migrations/: 20250101000000_baseline.sql  20260406000000_group_encryption.sql  20260406100000_group_key_envelopes.sql  20260408000000_refresh_token_families.sql  20260408100000_profile_fields.sql  20260409000000_contact_info.sql  20260409100000_searchable.sql  20260410000000_push_tokens.sql  20260411000000_fix_otp_unique_constraint.sql  20260411100000_multi_device_messages.sql  20260411200000_device_content_index.sql  20260411300000_username_search_index.sql  20260412000000_cascade_conversation_fks.sql  20260412100000_identity_key_binding.sql  20260414000000_disappearing_messages.sql  20260414200000_voice_canvas.sql  20260415000000_member_soft_delete.sql  20260416000000_rehash_identity_fingerprints.sql  20260416100000_signed_prekey_grace_period.sql  20260419000000_user_presence_status.sql  20260422000000_undelivered_messages_index.sql  20260423000000_reply_count_index.sql  20260424000000_identity_keys_device_metadata.sql  20260426000000_user_status_text.sql  20260426000001_pinned_conversations.sql  20260428100000_recipient_scoped_device_contents.sql  20260429000000_messages_sender_device_id.sql  20260429100000_conversation_key_version.sql  20260430000000_per_recipient_delivery.sql  20260430000001_direct_conversation_unique.sql  20260430010000_per_device_identity_fingerprint.sql  20260430020000_server_metadata.sql  20260501000000_drop_duplicate_reply_to_index.sql  20260501100000_conversations_member_count.sql  20260501200000_group_invite_tokens.sql  20260501300000_password_reset_tokens.sql  20260501400000_message_deliveries_ledger.sql  20260502000000_revoked_devices.sql
apps/server/src/: config.rs  error.rs  lib.rs  main.rs  push.rs  types.rs
apps/server/src/auth/: jwt.rs  middleware.rs  password.rs
apps/server/src/db/: canvas.rs  channels.rs  contacts.rs  groups.rs  keys.rs  media.rs  messages.rs  mod.rs  password_reset.rs  push_tokens.rs  reactions.rs  tokens.rs  users.rs
apps/server/src/middleware/: rate_limit.rs
apps/server/src/migrations/: 001_initial.sql  002_messaging.sql  003_keys.sql  004_reactions.sql  005_media.sql  006_public_groups.sql  007_avatars_and_groups.sql  008_refresh_tokens.sql  009_performance_indexes.sql  010_message_edit_delete_blocks.sql  011_cascade_user_deletes.sql  012_user_profile.sql  013_signal_device_keys.sql  014_encryption_toggle.sql  015_user_privacy_preferences.sql  016_channels_and_voice.sql  017_media_conversation_id.sql  018_audit_indexes.sql  019_message_replies.sql  020_message_search_and_mute.sql  021_banned_members.sql  022_cleanup_empty_groups.sql  023_enforce_encrypted_dms.sql  024_message_pinning.sql  027_channel_categories.sql
apps/server/src/routes/: auth.rs  canvas.rs  channels.rs  contacts.rs  group_keys.rs  groups.rs  keys.rs  link_preview.rs  media.rs  messages.rs  mod.rs  push.rs  reactions.rs  server_info.rs  users.rs  voice.rs  ws.rs
apps/server/src/ws/: handler.rs  hub.rs  message_service.rs  mod.rs  typing_service.rs
apps/server/tests/: api_auth.rs  api_auth_refresh_race.rs  api_canvas.rs  api_channels.rs  api_contacts.rs  api_contacts_extra.rs  api_group_keys.rs  api_groups.rs  api_health.rs  api_invite_links.rs  api_keys.rs  api_link_preview.rs  api_media.rs  api_messages.rs  api_messages_extra.rs  api_messages_reply_scope.rs  api_password_reset.rs  api_push.rs  api_rate_limit_proxy.rs  api_reactions.rs  api_server_info.rs  api_users.rs  api_voice.rs  auth_register_disabled.rs  db_cascade.rs  db_get_member_context.rs  group_key_rotation_on_kick.rs  migrations.rs  public_groups_member_count.rs  removed_member_envelope_read_403.rs  ws_canvas_fanout.rs  ws_events.rs  ws_heartbeat.rs  ws_messaging.rs  ws_presence_snapshot.rs  ws_ticket_security.rs
apps/server/tests/common/: mod.rs
core/rust-core/: Cargo.toml
core/rust-core/benches/: crypto.rs
core/rust-core/src/: api.rs  error.rs  lib.rs
core/rust-core/src/crypto/: encrypt.rs  keys.rs  mod.rs  session.rs  store.rs
core/rust-core/src/models/: contact.rs  message.rs  user.rs
core/rust-core/src/net/: connection.rs  mod.rs  ws_client.rs
core/rust-core/src/signal/: keys.rs  mod.rs  protocol.rs  ratchet.rs  session.rs  x3dh.rs
core/rust-core/src/storage/: contacts.rs  database.rs  keys.rs  messages.rs  mod.rs
docs/: CONTRIBUTING.md  SECURITY.md  agent-memory.md  ci-gates.md  ios-push-setup.md  ios-testflight-setup.md  planned_features.md  release-process.md  self-hosting.md  setup.md  style-sheet.md
infra/docker/: .env.prod.example  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  livekit.yaml
qa/: QA-REPORT.md
scripts/: demo_two_apps.sh  run.sh  seed_demo_data.sh  seed_full_demo.sh  test_e2e.sh
scripts/seed_assets/: demo.json
tests/e2e/: TEST_PLAN.md  TODO_e2e.md  beta_quick.spec.ts  crypto_dm_test.spec.ts  discord_ui.spec.ts  echo.spec.ts  four_users.spec.ts  full_test.spec.ts  group_create_ui.spec.ts  group_messaging_ui.spec.ts  hover_then_type.spec.ts  local_full.spec.ts  (+6 more)
(+392 files in other folders)
