[package]
name = "echo-server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Auth
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }
argon2 = "0.5"

# WebSocket / async
futures-util = "0.3"

# Connection hub
dashmap = "6"

# Config
dotenvy = "0.15"

# Encoding
base64 = "0.22"

# Crypto (refresh tokens)
sha2 = "0.10"
rand = "0.10"

# Signal Protocol signature verification
ed25519-dalek = { version = "2", features = ["std"] }

# Tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (link previews)
reqwest = { version = "0.13", features = ["json"] }

# File type detection (magic bytes)
infer = "0.19"

[dev-dependencies]
tokio-tungstenite = "0.28"
reqwest = { version = "0.13", features = ["json", "multipart"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "hub"
harness = false
