[package]
name = "echo-server"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
publish = false

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
# Used by cookie max_age (#342). Matches the version pulled in by `cookie`.
time = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Auth
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }
argon2 = "0.5"

# WebSocket / async
futures-util = "0.3"
# Used by link_preview streaming body cap (#684) -- reqwest bytes_stream
# yields bytes::Bytes, but it's not re-exported, so we depend directly.
bytes = "1"
# ReaderStream for streaming file download bodies (#680)
tokio-util = { version = "0.7", features = ["io"] }

# Connection hub
dashmap = "6"

# Config
dotenvy = "0.15"

# Encoding
base64 = "0.22"

# Crypto (refresh tokens)
sha2 = "0.10"
rand = "0.10"

# Signal Protocol signature verification
ed25519-dalek = { version = "2", features = ["std"] }

# Shared wire-format constants (#700). Path-only dep; deny.toml's
# allow-wildcard-paths exempts it from the wildcard ban so we don't need
# to keep a version pinned here in lockstep with the release pipeline's
# sed rewrite of core/rust-core/Cargo.toml.
echo-core = { path = "../../core/rust-core" }

# Tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (link previews)
# `stream` feature exposes Response::bytes_stream() for incremental body
# reads with a hard cap (#684).
reqwest = { version = "0.13", features = ["json", "stream"] }

# File type detection (magic bytes)
infer = "0.19"

[dev-dependencies]
tokio-tungstenite = "0.28"
reqwest = { version = "0.13", features = ["json", "multipart"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "hub"
harness = false
